--- a/Services/services.html
+++ b/Services/services.html
@@ -31,7 +31,7 @@
         </form>
 
         <div class="buttons">
-          <button type="button" class="button-login" id="signIn">Log In</button>
+          <button type="button" class="button-login" id="signIn">Sign In</button>
           <button type="button" class="button-ourPlans" id="contactUs">Contact us</button>
         </div>
       </div>
